@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2301] fixed "configure" script with libssh2-1.0.0 library (Sasha)
  - [ZBX-2296] fixed possible heavy loaded server crash when using internal checks (Sasha)
  - [ZBX-2295] added additional units to graphs Y axis (Aly)
  - [ZBX-2285] fixed sending of active items multiple times (asaveljevs,Sasha)
